使用 Colaboratory 建立

--- a/20230211.ipynb
+++ b/20230211.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNkUXr248/6FBya1hKyGkO5",
+      "authorship_tag": "ABX9TyP1vt02B2Z6gk7xqMUwp7Ly",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -765,6 +765,618 @@
       "metadata": {
         "id": "JYjzvRDYnyNa"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "list"
+      ],
+      "metadata": {
+        "id": "_pGboPjY4uSO"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = ['a', 'b', 'c', 'd', 'e']"
+      ],
+      "metadata": {
+        "id": "R5zNpx9x41DC"
+      },
+      "execution_count": 59,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y = list('abcde')"
+      ],
+      "metadata": {
+        "id": "aDWkxsql5DyD"
+      },
+      "execution_count": 60,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## dic (字典)"
+      ],
+      "metadata": {
+        "id": "vJY4YebH8kCY"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 建立一個空字典\n",
+        "d = {}"
+      ],
+      "metadata": {
+        "id": "m-WWDKNw8rjg"
+      },
+      "execution_count": 65,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 加入一筆資料\n",
+        "d[\"cat\"] = \"貓咪\""
+      ],
+      "metadata": {
+        "id": "wKuKXVop8wVI"
+      },
+      "execution_count": 66,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "d"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UYt2S9Tb9Eno",
+        "outputId": "1f1bd8a1-5adb-4645-b83a-3015a97ca465"
+      },
+      "execution_count": 67,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'cat': '貓咪'}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 67
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "d[\"dog\"] = \"狗狗\""
+      ],
+      "metadata": {
+        "id": "i2HQgSYK9aIm"
+      },
+      "execution_count": 68,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "d"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GK2cHvps9gEB",
+        "outputId": "4c49fbba-00d1-49bc-f8ac-3c04eb6b99b2"
+      },
+      "execution_count": 69,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'cat': '貓咪', 'dog': '狗狗'}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 69
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 查詢資料\n",
+        "d['cat']"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "tdW8BjUT9iSm",
+        "outputId": "7cbb794c-6935-4527-ae0d-8ac200db8a0e"
+      },
+      "execution_count": 70,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'貓咪'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 70
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "d[\"貓咪\"] = \"cat\""
+      ],
+      "metadata": {
+        "id": "wMRzrJN7-A3k"
+      },
+      "execution_count": 72,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "d[\"貓咪\"]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "qsWUclj8-Ggc",
+        "outputId": "97763545-0249-4416-bbc9-158d639d1c4f"
+      },
+      "execution_count": 73,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'cat'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 73
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## for迴圈與list及dict的合用"
+      ],
+      "metadata": {
+        "id": "XA-DEQz--xGu"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in range(5):\n",
+        "  print(i)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LjqF7LNp-4cd",
+        "outputId": "dde0d8d6-092d-4885-eca0-ee0348fa528f"
+      },
+      "execution_count": 74,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-nkqA8Z9_L_c",
+        "outputId": "434ed367-c05e-45fa-d0f2-108d0ed36e7e"
+      },
+      "execution_count": 75,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['a', 'b', 'c', 'd', 'e']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 75
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in x:\n",
+        "  print(i)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "J5LrwNlT_Oc2",
+        "outputId": "003fdbeb-9649-46f8-f820-db06da311913"
+      },
+      "execution_count": 79,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "a\n",
+            "b\n",
+            "c\n",
+            "d\n",
+            "e\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#for迴圈跟字典合用\n",
+        "for i in d:\n",
+        "  print(i)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yuID1jOz_jiR",
+        "outputId": "b51e3165-b4a3-4aab-fbfc-f632d6d91b1c"
+      },
+      "execution_count": 80,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "cat\n",
+            "dog\n",
+            "貓咪\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in d:\n",
+        "  print(d[i])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "H5L0SDeNASeE",
+        "outputId": "ac0e249f-2cf5-4220-c843-3e864a82dc71"
+      },
+      "execution_count": 81,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "貓咪\n",
+            "狗狗\n",
+            "cat\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#使用requests抓取網路資料"
+      ],
+      "metadata": {
+        "id": "0pTlDfnmMtCp"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 抓取網頁原始碼"
+      ],
+      "metadata": {
+        "id": "qzssweigNSFx"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "url = \"http://victorgau.github.io/khpy_web_intro/html_only.html\""
+      ],
+      "metadata": {
+        "id": "FEvjFiHEM1bZ"
+      },
+      "execution_count": 82,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 載入requests,用來抓取網路上的資料\n",
+        "import requests"
+      ],
+      "metadata": {
+        "id": "ACvU2KWLOKos"
+      },
+      "execution_count": 83,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 取得特定網址的網頁原始碼,並將回傳的內容(包含headers)放入變數r\n",
+        "r= requests.get(url)"
+      ],
+      "metadata": {
+        "id": "Zi0y_loEOVfc"
+      },
+      "execution_count": 85,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "PO6JHnYLOsJj"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "vgwtm8RRO46U"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 使用requests呼叫web API,寫一個中文字典\n",
+        "\n",
+        "API是一個提供給應用程式使用程式來存取特定服務的介面"
+      ],
+      "metadata": {
+        "id": "nbPmAuYLOu9r"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##方法一"
+      ],
+      "metadata": {
+        "id": "3QAPEVoyQyOV"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "q = \"教室\""
+      ],
+      "metadata": {
+        "id": "oLRVsCPLQ5dQ"
+      },
+      "execution_count": 86,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "url = \"http://www.moedict.tw/uni/\" + q"
+      ],
+      "metadata": {
+        "id": "fp1msDMVRAb9"
+      },
+      "execution_count": 89,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "url"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "AQAI2JljRa5h",
+        "outputId": "0225a9e8-8418-4e2c-c8dc-c2b3af8180d2"
+      },
+      "execution_count": 90,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'http://www.moedict.tw/uni/教室'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 90
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "r = requests.get(url)"
+      ],
+      "metadata": {
+        "id": "a5unuORARf10"
+      },
+      "execution_count": 91,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(r.text)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tBLld9D8RmHd",
+        "outputId": "d9a1cb82-0a88-481d-e444-12b17acba455"
+      },
+      "execution_count": 92,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\t{\n",
+            "\t\t\"heteronyms\": [\n",
+            "\t\t\t{\n",
+            "\t\t\t\t\"bopomofo\": \"ㄐㄧㄠˋ ㄕˋ\",\n",
+            "\t\t\t\t\"bopomofo2\": \"jiàu shr̀\",\n",
+            "\t\t\t\t\"definitions\": [\n",
+            "\t\t\t\t\t{\n",
+            "\t\t\t\t\t\t\"def\": \"學校裡進行教學活動的房間。\",\n",
+            "\t\t\t\t\t\t\"example\": [\n",
+            "\t\t\t\t\t\t\t\"如：「實驗教室」、「音樂教室」。\"\n",
+            "\t\t\t\t\t\t],\n",
+            "\t\t\t\t\t\t\"synonyms\": \"課堂,講堂\"\n",
+            "\t\t\t\t\t}\n",
+            "\t\t\t\t],\n",
+            "\t\t\t\t\"pinyin\": \"jiào shì\"\n",
+            "\t\t\t}\n",
+            "\t\t],\n",
+            "\t\t\"title\": \"教室\"\n",
+            "\t}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 剖析資料"
+      ],
+      "metadata": {
+        "id": "-AAPtkAyUsd5"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### request.get(url).jason()是啥?\n",
+        "\n",
+        "底下兩個東西結果是一樣的:\n",
+        "'''python\n",
+        "import requests\n",
+        "import jason\n",
+        "\n",
+        "r = requests.get(url)\n",
+        "data = jason.loads(r.text)\n",
+        "\n",
+        "作法二:\n",
+        "\n",
+        "import requests\n",
+        "\n",
+        "data = requests.get(url).jason()"
+      ],
+      "metadata": {
+        "id": "uyoI08Sybi_z"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 讀取0050的成份股\n",
+        "http://www.yuantaetfs.com/api/StkWeights?date=&fundid=1066"
+      ],
+      "metadata": {
+        "id": "u3DmNCJYd2z1"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "requests.get(url).json()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cLFhhQ0tauOC",
+        "outputId": "94e0ca11-d1c5-47f5-e979-f1b259732ab5"
+      },
+      "execution_count": 95,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'heteronyms': [{'bopomofo': 'ㄐㄧㄠˋ ㄕˋ',\n",
+              "   'bopomofo2': 'jiàu shr̀',\n",
+              "   'definitions': [{'def': '學校裡進行教學活動的房間。',\n",
+              "     'example': ['如：「實驗教室」、「音樂教室」。'],\n",
+              "     'synonyms': '課堂,講堂'}],\n",
+              "   'pinyin': 'jiào shì'}],\n",
+              " 'title': '教室'}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 95
+        }
+      ]
     }
   ]
 }
